--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
 	body{
-		background-color: pink;
+		background-color: grey;
 	}
   h1{
     	boarder-color: brown; 
@@ -19,6 +19,9 @@
 </style>
 </head> 
   <body>
+	  <h1>
+		  How-to-Videos
+	  </h1>
     <p><b><a href="https://www.youtube.com/watch?app=desktop&v=jhMBpkJcCbI" target="_blank">DIY Wooden Christmas Decoration Lights
     </a></b></p><br><br>
     
