--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	  <h1>
 		  How-to-Videos
 	  </h1>
+	  <img src="christmascrafts1.jpg alt="christmas" width="500" height="333"><br>
     <p><b><a href="https://www.youtube.com/watch?app=desktop&v=jhMBpkJcCbI" target="_blank">DIY Wooden Christmas Decoration Lights
     </a></b></p><br><br>
     
