--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 	  <img src="christmascrafts1.jpg" alt="christmas" width="500" height="333"><br>
     <p><b><a href="https://www.youtube.com/watch?app=desktop&v=jhMBpkJcCbI" target="_blank">DIY Wooden Christmas Decoration Lights
     </a></b></p><br><br>
-    
+
+	  <img src="farmhousebed.png" alt="bed" width="500" height="333"><br>
     <p><b><a href="https://www.youtube.com/watch?v=AjAh1OvaTlM&t=176s" target="_blank">DIY Farmhouse Bed
     </p></a></b>
   </body>
