--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	  <img src="farmhousebed.png" alt="bed" width="500" height="333"><br>
     <p><b><a href="https://www.youtube.com/watch?v=AjAh1OvaTlM&t=176s" target="_blank">DIY Farmhouse Bed
     </p></a></b>
-	 <div style="text-align:middle_right;">
+	 <div style="text-align: right">
       <iframe width="420" height="345" src="https://www.youtube.com/embed/bsVu2az250Q?controls=1">
   </iframe>  
   </body>
