--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	  <h1>
 		  How-to-Videos
 	  </h1>
-	  <div style="text-align: right">
+	  <div style="text-align: left;">
       <iframe width="420" height="345" src="https://www.youtube.com/embed/bsVu2az250Q?controls=1">
   </iframe> 
 	  <img src="christmascrafts1.jpg" alt="christmas" width="500" height="333"><br>
