--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 	  <h1>
 		  How-to-Videos
 	  </h1>
-	  <div style="text-align: left;">
-      <iframe width="420" height="345" src="https://www.youtube.com/embed/bsVu2az250Q?controls=1">
-  </iframe> 
 	  <img src="christmascrafts1.jpg" alt="christmas" width="500" height="333"><br>
     <p><b><a href="https://www.youtube.com/watch?app=desktop&v=jhMBpkJcCbI" target="_blank">DIY Wooden Christmas Decoration Lights
     </a></b></p><br><br>
-
+		  
+<div style="text-align: right;">
+      <iframe width="420" height="345" src="https://www.youtube.com/embed/bsVu2az250Q?controls=1">
+  </iframe> 
+	
 	  <img src="farmhousebed.png" alt="bed" width="500" height="333"><br>
     <p><b><a href="https://www.youtube.com/watch?v=AjAh1OvaTlM&t=176s" target="_blank">DIY Farmhouse Bed
     </p></a></b> 
