--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p><b><a href="https://www.youtube.com/watch?v=AjAh1OvaTlM&t=176s" target="_blank">DIY Farmhouse Bed
     </p></a></b> 
 	    
-	    <div style="text-align: right;">
+	    <div style="text-align: left;">
       <iframe width="420" height="345" src="https://www.youtube.com/embed/bsVu2az250Q?controls=1">
   </iframe> 
   </body>
